add 2 refs from main page and 78 from lineage-proposal

--- a/automated-issue-ref.ipynb
+++ b/automated-issue-ref.ipynb
@@ -113,7 +113,16 @@
       "processed  990 milestones\n",
       "processed  1000 milestones\n",
       "processed  1010 milestones\n",
-      "processed  1020 milestones\n"
+      "processed  1020 milestones\n",
+      "processed  1030 milestones\n",
+      "processed  1040 milestones\n",
+      "processed  1050 milestones\n",
+      "processed  1060 milestones\n",
+      "processed  1070 milestones\n",
+      "processed  1080 milestones\n",
+      "processed  1090 milestones\n",
+      "processed  1100 milestones\n",
+      "processed  1110 milestones\n"
      ]
     }
    ],
@@ -210,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "88a367db",
    "metadata": {},
    "outputs": [],
@@ -247,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "f5b15585",
    "metadata": {},
    "outputs": [],
@@ -270,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "a56544a8",
    "metadata": {},
    "outputs": [
@@ -278,29 +287,86 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['DV.7.1.1', 'sars-cov-2-variants/lineage-proposals#732']\n",
-      "['DV.7.1.2', '#2258']\n",
-      "['JP.1', 'sars-cov-2-variants/lineage-proposals#655']\n",
-      "['CH.1.1.32', '#2150']\n",
-      "['GK.2.1.1', 'sars-cov-2-variants/lineage-proposals#716']\n",
-      "['GK.2.3', 'sars-cov-2-variants/lineage-proposals#813']\n",
-      "['GK.4', '#2276']\n",
-      "['JD.1.1.1', 'sars-cov-2-variants/lineage-proposals#864']\n",
-      "['JD.1.1.2', 'sars-cov-2-variants/lineage-proposals#754']\n",
-      "['FL.1.6', 'sars-cov-2-variants/lineage-proposals#59']\n",
-      "['FL.15.1.1', 'sars-cov-2-variants/lineage-proposals#646']\n",
-      "['FL.15.2', 'sars-cov-2-variants/lineage-proposals#578']\n",
-      "['FL.20.2', 'sars-cov-2-variants/lineage-proposals#571']\n",
-      "['FL.32', 'sars-cov-2-variants/lineage-proposals#719']\n",
-      "['FL.32.1', 'sars-cov-2-variants/lineage-proposals#719']\n",
-      "['FL.33.1', 'sars-cov-2-variants/lineage-proposals#828']\n",
-      "['HK.3.3', 'sars-cov-2-variants/lineage-proposals#744']\n",
-      "['JG.3', '#2231']\n",
-      "['EG.5.1.8', 'sars-cov-2-variants/lineage-proposals#537']\n",
-      "['EG.6.1.1', 'sars-cov-2-variants/lineage-proposals#546']\n",
-      "['JM.1', 'sars-cov-2-variants/lineage-proposals#569']\n",
-      "['GW.5', '#2142']\n",
-      "['GS.5', 'sars-cov-2-variants/lineage-proposals#768']\n"
+      "['JV.1', 'sars-cov-2-variants/lineage-proposals#760']\n",
+      "['DV.7.1.3', 'sars-cov-2-variants/lineage-proposals#851']\n",
+      "['DV.7.1.5', 'sars-cov-2-variants/lineage-proposals#729']\n",
+      "['JN.3', 'sars-cov-2-variants/lineage-proposals#892']\n",
+      "['JQ.1', 'sars-cov-2-variants/lineage-proposals#906']\n",
+      "['JH.2', '#2068']\n",
+      "['FD.5.1', 'sars-cov-2-variants/lineage-proposals#385']\n",
+      "['GK.1.2.1', '#2314']\n",
+      "['GK.1.6', 'sars-cov-2-variants/lineage-proposals#643']\n",
+      "['GK.1.6.1', 'sars-cov-2-variants/lineage-proposals#643']\n",
+      "['GK.2.4', 'sars-cov-2-variants/lineage-proposals#823']\n",
+      "['GK.5', 'sars-cov-2-variants/lineage-proposals#736']\n",
+      "['GK.5.1', 'sars-cov-2-variants/lineage-proposals#736']\n",
+      "['GK.6', 'sars-cov-2-variants/lineage-proposals#715']\n",
+      "['GK.7', 'sars-cov-2-variants/lineage-proposals#907']\n",
+      "['GK.8', 'sars-cov-2-variants/lineage-proposals#909']\n",
+      "['GK.8.1', 'sars-cov-2-variants/lineage-proposals#909']\n",
+      "['GK.10', 'sars-cov-2-variants/lineage-proposals#761']\n",
+      "['GN.1.3', 'sars-cov-2-variants/lineage-proposals#816']\n",
+      "['JD.1.1.3', 'sars-cov-2-variants/lineage-proposals#896']\n",
+      "['KA.1', 'sars-cov-2-variants/lineage-proposals#822']\n",
+      "['JZ.1', 'sars-cov-2-variants/lineage-proposals#224']\n",
+      "['HN.2', 'sars-cov-2-variants/lineage-proposals#676']\n",
+      "['HN.2.1', 'sars-cov-2-variants/lineage-proposals#676']\n",
+      "['HN.3.1', 'sars-cov-2-variants/lineage-proposals#383']\n",
+      "['HN.5', 'sars-cov-2-variants/lineage-proposals#936']\n",
+      "['FL.13.4', 'sars-cov-2-variants/lineage-proposals#638']\n",
+      "['FL.13.4.1', 'sars-cov-2-variants/lineage-proposals#638']\n",
+      "['FL.13.5', 'sars-cov-2-variants/lineage-proposals#692']\n",
+      "['FL.23.2', 'sars-cov-2-variants/lineage-proposals#381']\n",
+      "['HK.1.2', 'sars-cov-2-variants/lineage-proposals#631']\n",
+      "['HK.2.1', 'sars-cov-2-variants/lineage-proposals#537']\n",
+      "['HK.3.4', 'sars-cov-2-variants/lineage-proposals#764']\n",
+      "['HK.3.5', 'sars-cov-2-variants/lineage-proposals#865']\n",
+      "['HK.3.6', 'sars-cov-2-variants/lineage-proposals#809']\n",
+      "['HK.3.7', 'sars-cov-2-variants/lineage-proposals#793']\n",
+      "['HK.11.1', 'sars-cov-2-variants/lineage-proposals#537']\n",
+      "['HK.13', 'sars-cov-2-variants/lineage-proposals#537']\n",
+      "['HK.13.2', 'sars-cov-2-variants/lineage-proposals#943']\n",
+      "['HK.14', 'sars-cov-2-variants/lineage-proposals#537']\n",
+      "['HK.15', 'sars-cov-2-variants/lineage-proposals#588']\n",
+      "['HK.16', 'sars-cov-2-variants/lineage-proposals#841']\n",
+      "['HK.18', 'sars-cov-2-variants/lineage-proposals#800']\n",
+      "['JG.3.1', 'sars-cov-2-variants/lineage-proposals#829']\n",
+      "['HV.1.1', 'sars-cov-2-variants/lineage-proposals#866']\n",
+      "['HV.1.3', 'sars-cov-2-variants/lineage-proposals#924']\n",
+      "['JR.1.1', 'sars-cov-2-variants/lineage-proposals#537']\n",
+      "['EG.6.1.2', 'sars-cov-2-variants/lineage-proposals#826']\n",
+      "['GA.4.1.3', 'sars-cov-2-variants/lineage-proposals#968']\n",
+      "['GA.4.3', 'sars-cov-2-variants/lineage-proposals#908']\n",
+      "['GA.7.1', 'sars-cov-2-variants/lineage-proposals#755']\n",
+      "['FE.1.1.5', 'sars-cov-2-variants/lineage-proposals#556']\n",
+      "['GW.5.3', 'sars-cov-2-variants/lineage-proposals#815']\n",
+      "['GW.5.3.1', 'sars-cov-2-variants/lineage-proposals#815']\n",
+      "['FY.1.4', 'sars-cov-2-variants/lineage-proposals#165']\n",
+      "['FY.5.1', 'sars-cov-2-variants/lineage-proposals#929']\n",
+      "['FY.5.1.1', 'sars-cov-2-variants/lineage-proposals#790']\n",
+      "['FY.6.2', 'sars-cov-2-variants/lineage-proposals#637']\n",
+      "['FY.8', 'sars-cov-2-variants/lineage-proposals#635']\n",
+      "['JC.2', 'sars-cov-2-variants/lineage-proposals#961']\n",
+      "['JC.5', 'sars-cov-2-variants/lineage-proposals#629']\n",
+      "['HH.2.1', 'sars-cov-2-variants/lineage-proposals#236']\n",
+      "['HH.5', 'sars-cov-2-variants/lineage-proposals#438']\n",
+      "['HH.6', 'sars-cov-2-variants/lineage-proposals#236']\n",
+      "['HH.8.1', 'sars-cov-2-variants/lineage-proposals#236']\n",
+      "['JE.1.1', 'sars-cov-2-variants/lineage-proposals#827']\n",
+      "['GJ.1.2.6', 'sars-cov-2-variants/lineage-proposals#726']\n",
+      "['GJ.1.2.7', 'sars-cov-2-variants/lineage-proposals#726']\n",
+      "['GJ.5', 'sars-cov-2-variants/lineage-proposals#429']\n",
+      "['GJ.5.1', 'sars-cov-2-variants/lineage-proposals#429']\n",
+      "['GJ.6', 'sars-cov-2-variants/lineage-proposals#675']\n",
+      "['GJ.7', 'sars-cov-2-variants/lineage-proposals#439']\n",
+      "['XBB.2.3.15', 'sars-cov-2-variants/lineage-proposals#722']\n",
+      "['JS.2', 'sars-cov-2-variants/lineage-proposals#722']\n",
+      "['XBB.2.3.18', 'sars-cov-2-variants/lineage-proposals#738']\n",
+      "['JY.1', 'sars-cov-2-variants/lineage-proposals#731']\n",
+      "['XBC.1.6.5', 'sars-cov-2-variants/lineage-proposals#479']\n",
+      "['JT.1', 'sars-cov-2-variants/lineage-proposals#203']\n",
+      "['XCZ', 'sars-cov-2-variants/lineage-proposals#839']\n",
+      "['XDB', 'sars-cov-2-variants/lineage-proposals#969']\n"
      ]
     }
    ],
@@ -391,10 +457,10 @@
     "    linsp=data[i].split()\n",
     "    \n",
     "    if (len(linsp)>0) and (linsp[0] in missing_refs):\n",
-    "        if \"From\" in data[i]:\n",
-    "            data[i]=data[i].split(\" From\")[0]\n",
+    "        if \"，from\" in data[i]:\n",
+    "            data[i]=data[i].split(\", from\")[0]\n",
     "            upgrade_count+=1\n",
-    "        data[i]=data[i].replace('\\n','')+\" From \"+missing_refs[linsp[0]]+'\\n'\n",
+    "        data[i]=data[i].replace('\\n','')+\", from \"+missing_refs[linsp[0]]+'\\n'\n",
     "        if 'sars' in missing_refs[linsp[0]]:\n",
     "            sub_count+=1\n",
     "        else:\n",
