add_1_ref_from_main_page_and_54_from_lineage_proposal

--- a/automated-issue-ref.ipynb
+++ b/automated-issue-ref.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "f64573a2",
    "metadata": {
     "scrolled": true
@@ -122,7 +122,15 @@
       "processed  1080 milestones\n",
       "processed  1090 milestones\n",
       "processed  1100 milestones\n",
-      "processed  1110 milestones\n"
+      "processed  1110 milestones\n",
+      "processed  1120 milestones\n",
+      "processed  1130 milestones\n",
+      "processed  1140 milestones\n",
+      "processed  1150 milestones\n",
+      "processed  1160 milestones\n",
+      "processed  1170 milestones\n",
+      "processed  1180 milestones\n",
+      "processed  1190 milestones\n"
      ]
     }
    ],
@@ -219,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "88a367db",
    "metadata": {},
    "outputs": [],
@@ -256,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "f5b15585",
    "metadata": {},
    "outputs": [],
@@ -279,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "a56544a8",
    "metadata": {},
    "outputs": [
@@ -287,86 +295,61 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['JV.1', 'sars-cov-2-variants/lineage-proposals#760']\n",
-      "['DV.7.1.3', 'sars-cov-2-variants/lineage-proposals#851']\n",
-      "['DV.7.1.5', 'sars-cov-2-variants/lineage-proposals#729']\n",
-      "['JN.3', 'sars-cov-2-variants/lineage-proposals#892']\n",
-      "['JQ.1', 'sars-cov-2-variants/lineage-proposals#906']\n",
+      "['DV.7.1.6', 'sars-cov-2-variants/lineage-proposals#765']\n",
+      "['JN.1.1', 'sars-cov-2-variants/lineage-proposals#987']\n",
+      "['JN.1.1.1', 'sars-cov-2-variants/lineage-proposals#1097']\n",
+      "['JN.1.2', 'sars-cov-2-variants/lineage-proposals#1087']\n",
+      "['JN.4', 'sars-cov-2-variants/lineage-proposals#1009']\n",
+      "['JN.5.1', 'sars-cov-2-variants/lineage-proposals#954']\n",
+      "['JN.7', 'sars-cov-2-variants/lineage-proposals#856']\n",
+      "['JN.10', 'sars-cov-2-variants/lineage-proposals#954']\n",
+      "['BA.2.86.4', 'sars-cov-2-variants/lineage-proposals#1032']\n",
       "['JH.2', '#2068']\n",
-      "['FD.5.1', 'sars-cov-2-variants/lineage-proposals#385']\n",
-      "['GK.1.2.1', '#2314']\n",
-      "['GK.1.6', 'sars-cov-2-variants/lineage-proposals#643']\n",
-      "['GK.1.6.1', 'sars-cov-2-variants/lineage-proposals#643']\n",
-      "['GK.2.4', 'sars-cov-2-variants/lineage-proposals#823']\n",
-      "['GK.5', 'sars-cov-2-variants/lineage-proposals#736']\n",
-      "['GK.5.1', 'sars-cov-2-variants/lineage-proposals#736']\n",
-      "['GK.6', 'sars-cov-2-variants/lineage-proposals#715']\n",
-      "['GK.7', 'sars-cov-2-variants/lineage-proposals#907']\n",
-      "['GK.8', 'sars-cov-2-variants/lineage-proposals#909']\n",
-      "['GK.8.1', 'sars-cov-2-variants/lineage-proposals#909']\n",
-      "['GK.10', 'sars-cov-2-variants/lineage-proposals#761']\n",
-      "['GN.1.3', 'sars-cov-2-variants/lineage-proposals#816']\n",
-      "['JD.1.1.3', 'sars-cov-2-variants/lineage-proposals#896']\n",
-      "['KA.1', 'sars-cov-2-variants/lineage-proposals#822']\n",
-      "['JZ.1', 'sars-cov-2-variants/lineage-proposals#224']\n",
-      "['HN.2', 'sars-cov-2-variants/lineage-proposals#676']\n",
-      "['HN.2.1', 'sars-cov-2-variants/lineage-proposals#676']\n",
-      "['HN.3.1', 'sars-cov-2-variants/lineage-proposals#383']\n",
-      "['HN.5', 'sars-cov-2-variants/lineage-proposals#936']\n",
-      "['FL.13.4', 'sars-cov-2-variants/lineage-proposals#638']\n",
-      "['FL.13.4.1', 'sars-cov-2-variants/lineage-proposals#638']\n",
-      "['FL.13.5', 'sars-cov-2-variants/lineage-proposals#692']\n",
-      "['FL.23.2', 'sars-cov-2-variants/lineage-proposals#381']\n",
-      "['HK.1.2', 'sars-cov-2-variants/lineage-proposals#631']\n",
-      "['HK.2.1', 'sars-cov-2-variants/lineage-proposals#537']\n",
-      "['HK.3.4', 'sars-cov-2-variants/lineage-proposals#764']\n",
-      "['HK.3.5', 'sars-cov-2-variants/lineage-proposals#865']\n",
-      "['HK.3.6', 'sars-cov-2-variants/lineage-proposals#809']\n",
-      "['HK.3.7', 'sars-cov-2-variants/lineage-proposals#793']\n",
-      "['HK.11.1', 'sars-cov-2-variants/lineage-proposals#537']\n",
-      "['HK.13', 'sars-cov-2-variants/lineage-proposals#537']\n",
-      "['HK.13.2', 'sars-cov-2-variants/lineage-proposals#943']\n",
-      "['HK.14', 'sars-cov-2-variants/lineage-proposals#537']\n",
-      "['HK.15', 'sars-cov-2-variants/lineage-proposals#588']\n",
-      "['HK.16', 'sars-cov-2-variants/lineage-proposals#841']\n",
-      "['HK.18', 'sars-cov-2-variants/lineage-proposals#800']\n",
-      "['JG.3.1', 'sars-cov-2-variants/lineage-proposals#829']\n",
-      "['HV.1.1', 'sars-cov-2-variants/lineage-proposals#866']\n",
-      "['HV.1.3', 'sars-cov-2-variants/lineage-proposals#924']\n",
-      "['JR.1.1', 'sars-cov-2-variants/lineage-proposals#537']\n",
-      "['EG.6.1.2', 'sars-cov-2-variants/lineage-proposals#826']\n",
-      "['GA.4.1.3', 'sars-cov-2-variants/lineage-proposals#968']\n",
-      "['GA.4.3', 'sars-cov-2-variants/lineage-proposals#908']\n",
-      "['GA.7.1', 'sars-cov-2-variants/lineage-proposals#755']\n",
-      "['FE.1.1.5', 'sars-cov-2-variants/lineage-proposals#556']\n",
-      "['GW.5.3', 'sars-cov-2-variants/lineage-proposals#815']\n",
-      "['GW.5.3.1', 'sars-cov-2-variants/lineage-proposals#815']\n",
-      "['FY.1.4', 'sars-cov-2-variants/lineage-proposals#165']\n",
-      "['FY.5.1', 'sars-cov-2-variants/lineage-proposals#929']\n",
-      "['FY.5.1.1', 'sars-cov-2-variants/lineage-proposals#790']\n",
-      "['FY.6.2', 'sars-cov-2-variants/lineage-proposals#637']\n",
-      "['FY.8', 'sars-cov-2-variants/lineage-proposals#635']\n",
-      "['JC.2', 'sars-cov-2-variants/lineage-proposals#961']\n",
-      "['JC.5', 'sars-cov-2-variants/lineage-proposals#629']\n",
-      "['HH.2.1', 'sars-cov-2-variants/lineage-proposals#236']\n",
-      "['HH.5', 'sars-cov-2-variants/lineage-proposals#438']\n",
-      "['HH.6', 'sars-cov-2-variants/lineage-proposals#236']\n",
-      "['HH.8.1', 'sars-cov-2-variants/lineage-proposals#236']\n",
-      "['JE.1.1', 'sars-cov-2-variants/lineage-proposals#827']\n",
-      "['GJ.1.2.6', 'sars-cov-2-variants/lineage-proposals#726']\n",
-      "['GJ.1.2.7', 'sars-cov-2-variants/lineage-proposals#726']\n",
-      "['GJ.5', 'sars-cov-2-variants/lineage-proposals#429']\n",
-      "['GJ.5.1', 'sars-cov-2-variants/lineage-proposals#429']\n",
-      "['GJ.6', 'sars-cov-2-variants/lineage-proposals#675']\n",
-      "['GJ.7', 'sars-cov-2-variants/lineage-proposals#439']\n",
-      "['XBB.2.3.15', 'sars-cov-2-variants/lineage-proposals#722']\n",
-      "['JS.2', 'sars-cov-2-variants/lineage-proposals#722']\n",
-      "['XBB.2.3.18', 'sars-cov-2-variants/lineage-proposals#738']\n",
-      "['JY.1', 'sars-cov-2-variants/lineage-proposals#731']\n",
-      "['XBC.1.6.5', 'sars-cov-2-variants/lineage-proposals#479']\n",
-      "['JT.1', 'sars-cov-2-variants/lineage-proposals#203']\n",
-      "['XCZ', 'sars-cov-2-variants/lineage-proposals#839']\n",
-      "['XDB', 'sars-cov-2-variants/lineage-proposals#969']\n"
+      "['JD.1.1.5', 'sars-cov-2-variants/lineage-proposals#1079']\n",
+      "['KC.1', 'sars-cov-2-variants/lineage-proposals#614']\n",
+      "['KF.1', 'sars-cov-2-variants/lineage-proposals#890']\n",
+      "['KF.2', 'sars-cov-2-variants/lineage-proposals#1111']\n",
+      "['HK.3.2.2', 'sars-cov-2-variants/lineage-proposals#867']\n",
+      "['HK.3.9', 'sars-cov-2-variants/lineage-proposals#1092']\n",
+      "['HK.3.10', 'sars-cov-2-variants/lineage-proposals#1055']\n",
+      "['HK.3.12', 'sars-cov-2-variants/lineage-proposals#886']\n",
+      "['HK.3.13', 'sars-cov-2-variants/lineage-proposals#601']\n",
+      "['HK.20', 'sars-cov-2-variants/lineage-proposals#537']\n",
+      "['HK.20.1', 'sars-cov-2-variants/lineage-proposals#537']\n",
+      "['HK.23.1', 'sars-cov-2-variants/lineage-proposals#537']\n",
+      "['HK.23.1.1', 'sars-cov-2-variants/lineage-proposals#537']\n",
+      "['HK.24.1', 'sars-cov-2-variants/lineage-proposals#537']\n",
+      "['HK.26', 'sars-cov-2-variants/lineage-proposals#763']\n",
+      "['HK.26.1', 'sars-cov-2-variants/lineage-proposals#763']\n",
+      "['HK.27.1', 'sars-cov-2-variants/lineage-proposals#525']\n",
+      "['HK.32', 'sars-cov-2-variants/lineage-proposals#601']\n",
+      "['HK.33', 'sars-cov-2-variants/lineage-proposals#537']\n",
+      "['HK.34', 'sars-cov-2-variants/lineage-proposals#905']\n",
+      "['HK.34.1', 'sars-cov-2-variants/lineage-proposals#1048']\n",
+      "['HV.1.2', 'sars-cov-2-variants/lineage-proposals#957']\n",
+      "['HV.1.4', 'sars-cov-2-variants/lineage-proposals#957']\n",
+      "['HV.1.5', 'sars-cov-2-variants/lineage-proposals#957']\n",
+      "['HV.1.6.1', 'sars-cov-2-variants/lineage-proposals#957']\n",
+      "['HV.1.7', 'sars-cov-2-variants/lineage-proposals#957']\n",
+      "['KB.3', 'sars-cov-2-variants/lineage-proposals#1052']\n",
+      "['KB.4', 'sars-cov-2-variants/lineage-proposals#891']\n",
+      "['JR.1.1.1', 'sars-cov-2-variants/lineage-proposals#1015']\n",
+      "['EG.5.1.16', 'sars-cov-2-variants/lineage-proposals#899']\n",
+      "['EG.5.1.17', 'sars-cov-2-variants/lineage-proposals#537']\n",
+      "['EG.5.1.19', 'sars-cov-2-variants/lineage-proposals#537']\n",
+      "['EG.5.2.4', 'sars-cov-2-variants/lineage-proposals#770']\n",
+      "['GY.1.1', 'sars-cov-2-variants/lineage-proposals#804']\n",
+      "['GY.1.1.1', 'sars-cov-2-variants/lineage-proposals#804']\n",
+      "['XBB.1.16.26', 'sars-cov-2-variants/lineage-proposals#685']\n",
+      "['GA.10.1', 'sars-cov-2-variants/lineage-proposals#919']\n",
+      "['KE.2', 'sars-cov-2-variants/lineage-proposals#945']\n",
+      "['FY.5.2', 'sars-cov-2-variants/lineage-proposals#267']\n",
+      "['FY.5.4', 'sars-cov-2-variants/lineage-proposals#929']\n",
+      "['FY.5.5.1', 'sars-cov-2-variants/lineage-proposals#929']\n",
+      "['FY.8.1', 'sars-cov-2-variants/lineage-proposals#1002']\n",
+      "['FY.8.1.1', 'sars-cov-2-variants/lineage-proposals#1002']\n",
+      "['XBC.1.3.1', 'sars-cov-2-variants/lineage-proposals#542']\n",
+      "['KD.1', 'sars-cov-2-variants/lineage-proposals#673']\n"
      ]
     }
    ],
@@ -423,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "1c9369e1",
    "metadata": {},
    "outputs": [
@@ -431,9 +414,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Add  5  references from cov-lineages/pango-designation.\n",
+      "Add  2  references from cov-lineages/pango-designation.\n",
       "Upgrade  0  references from cov-lineages/pango-designation.\n",
-      "Add  18  references from sars-cov-2-variants/lineage-proposals.\n"
+      "Add  78  references from sars-cov-2-variants/lineage-proposals.\n"
      ]
     }
    ],
