add_5_ref_from_main_page_49_from_lineage_proposals

--- a/automated-issue-ref.ipynb
+++ b/automated-issue-ref.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "f64573a2",
    "metadata": {
     "scrolled": true
@@ -130,7 +130,21 @@
       "processed  1160 milestones\n",
       "processed  1170 milestones\n",
       "processed  1180 milestones\n",
-      "processed  1190 milestones\n"
+      "processed  1190 milestones\n",
+      "processed  1200 milestones\n",
+      "processed  1210 milestones\n",
+      "processed  1220 milestones\n",
+      "processed  1230 milestones\n",
+      "processed  1240 milestones\n",
+      "processed  1250 milestones\n",
+      "processed  1260 milestones\n",
+      "processed  1270 milestones\n",
+      "processed  1280 milestones\n",
+      "processed  1290 milestones\n",
+      "processed  1300 milestones\n",
+      "processed  1310 milestones\n",
+      "processed  1320 milestones\n",
+      "processed  1330 milestones\n"
      ]
     }
    ],
@@ -227,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "88a367db",
    "metadata": {},
    "outputs": [],
@@ -264,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "f5b15585",
    "metadata": {},
    "outputs": [],
@@ -287,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "a56544a8",
    "metadata": {},
    "outputs": [
@@ -295,61 +309,60 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['DV.7.1.6', 'sars-cov-2-variants/lineage-proposals#765']\n",
-      "['JN.1.1', 'sars-cov-2-variants/lineage-proposals#987']\n",
-      "['JN.1.1.1', 'sars-cov-2-variants/lineage-proposals#1097']\n",
-      "['JN.1.2', 'sars-cov-2-variants/lineage-proposals#1087']\n",
-      "['JN.4', 'sars-cov-2-variants/lineage-proposals#1009']\n",
-      "['JN.5.1', 'sars-cov-2-variants/lineage-proposals#954']\n",
-      "['JN.7', 'sars-cov-2-variants/lineage-proposals#856']\n",
-      "['JN.10', 'sars-cov-2-variants/lineage-proposals#954']\n",
-      "['BA.2.86.4', 'sars-cov-2-variants/lineage-proposals#1032']\n",
+      "['KG.1', 'sars-cov-2-variants/lineage-proposals#951']\n",
+      "['DV.7.1.8', 'sars-cov-2-variants/lineage-proposals#860']\n",
+      "['JN.1.1.2', 'sars-cov-2-variants/lineage-proposals#1147']\n",
+      "['JN.1.1.3', 'sars-cov-2-variants/lineage-proposals#1089']\n",
+      "['JN.1.6.1', 'sars-cov-2-variants/lineage-proposals#1089']\n",
+      "['JN.1.7', 'sars-cov-2-variants/lineage-proposals#1097']\n",
+      "['JN.1.8.1', 'sars-cov-2-variants/lineage-proposals#1097']\n",
+      "['JN.1.9', '#2410']\n",
+      "['JN.1.10', 'sars-cov-2-variants/lineage-proposals#1135']\n",
+      "['JN.2.2', '#2433']\n",
+      "['JN.2.5', 'sars-cov-2-variants/lineage-proposals#1173']\n",
       "['JH.2', '#2068']\n",
-      "['JD.1.1.5', 'sars-cov-2-variants/lineage-proposals#1079']\n",
-      "['KC.1', 'sars-cov-2-variants/lineage-proposals#614']\n",
-      "['KF.1', 'sars-cov-2-variants/lineage-proposals#890']\n",
-      "['KF.2', 'sars-cov-2-variants/lineage-proposals#1111']\n",
-      "['HK.3.2.2', 'sars-cov-2-variants/lineage-proposals#867']\n",
-      "['HK.3.9', 'sars-cov-2-variants/lineage-proposals#1092']\n",
-      "['HK.3.10', 'sars-cov-2-variants/lineage-proposals#1055']\n",
-      "['HK.3.12', 'sars-cov-2-variants/lineage-proposals#886']\n",
-      "['HK.3.13', 'sars-cov-2-variants/lineage-proposals#601']\n",
-      "['HK.20', 'sars-cov-2-variants/lineage-proposals#537']\n",
-      "['HK.20.1', 'sars-cov-2-variants/lineage-proposals#537']\n",
-      "['HK.23.1', 'sars-cov-2-variants/lineage-proposals#537']\n",
-      "['HK.23.1.1', 'sars-cov-2-variants/lineage-proposals#537']\n",
-      "['HK.24.1', 'sars-cov-2-variants/lineage-proposals#537']\n",
-      "['HK.26', 'sars-cov-2-variants/lineage-proposals#763']\n",
-      "['HK.26.1', 'sars-cov-2-variants/lineage-proposals#763']\n",
-      "['HK.27.1', 'sars-cov-2-variants/lineage-proposals#525']\n",
-      "['HK.32', 'sars-cov-2-variants/lineage-proposals#601']\n",
-      "['HK.33', 'sars-cov-2-variants/lineage-proposals#537']\n",
-      "['HK.34', 'sars-cov-2-variants/lineage-proposals#905']\n",
-      "['HK.34.1', 'sars-cov-2-variants/lineage-proposals#1048']\n",
-      "['HV.1.2', 'sars-cov-2-variants/lineage-proposals#957']\n",
-      "['HV.1.4', 'sars-cov-2-variants/lineage-proposals#957']\n",
-      "['HV.1.5', 'sars-cov-2-variants/lineage-proposals#957']\n",
-      "['HV.1.6.1', 'sars-cov-2-variants/lineage-proposals#957']\n",
-      "['HV.1.7', 'sars-cov-2-variants/lineage-proposals#957']\n",
-      "['KB.3', 'sars-cov-2-variants/lineage-proposals#1052']\n",
-      "['KB.4', 'sars-cov-2-variants/lineage-proposals#891']\n",
-      "['JR.1.1.1', 'sars-cov-2-variants/lineage-proposals#1015']\n",
-      "['EG.5.1.16', 'sars-cov-2-variants/lineage-proposals#899']\n",
-      "['EG.5.1.17', 'sars-cov-2-variants/lineage-proposals#537']\n",
-      "['EG.5.1.19', 'sars-cov-2-variants/lineage-proposals#537']\n",
-      "['EG.5.2.4', 'sars-cov-2-variants/lineage-proposals#770']\n",
-      "['GY.1.1', 'sars-cov-2-variants/lineage-proposals#804']\n",
-      "['GY.1.1.1', 'sars-cov-2-variants/lineage-proposals#804']\n",
-      "['XBB.1.16.26', 'sars-cov-2-variants/lineage-proposals#685']\n",
-      "['GA.10.1', 'sars-cov-2-variants/lineage-proposals#919']\n",
-      "['KE.2', 'sars-cov-2-variants/lineage-proposals#945']\n",
-      "['FY.5.2', 'sars-cov-2-variants/lineage-proposals#267']\n",
-      "['FY.5.4', 'sars-cov-2-variants/lineage-proposals#929']\n",
-      "['FY.5.5.1', 'sars-cov-2-variants/lineage-proposals#929']\n",
-      "['FY.8.1', 'sars-cov-2-variants/lineage-proposals#1002']\n",
-      "['FY.8.1.1', 'sars-cov-2-variants/lineage-proposals#1002']\n",
-      "['XBC.1.3.1', 'sars-cov-2-variants/lineage-proposals#542']\n",
-      "['KD.1', 'sars-cov-2-variants/lineage-proposals#673']\n"
+      "['GK.1.8', 'sars-cov-2-variants/lineage-proposals#643']\n",
+      "['GK.1.8.1', 'sars-cov-2-variants/lineage-proposals#1127']\n",
+      "['GK.1.11', 'sars-cov-2-variants/lineage-proposals#643']\n",
+      "['GK.3.1', 'sars-cov-2-variants/lineage-proposals#643']\n",
+      "['KK.1', 'sars-cov-2-variants/lineage-proposals#1210']\n",
+      "['KK.2', 'sars-cov-2-variants/lineage-proposals#1277']\n",
+      "['XBB.1.5.108', 'sars-cov-2-variants/lineage-proposals#550']\n",
+      "['XBB.1.5.109', '#2262']\n",
+      "['HN.4.1', 'sars-cov-2-variants/lineage-proposals#1054']\n",
+      "['HN.4.1.1', 'sars-cov-2-variants/lineage-proposals#1054']\n",
+      "['HN.4.2', 'sars-cov-2-variants/lineage-proposals#971']\n",
+      "['FL.1.8', 'sars-cov-2-variants/lineage-proposals#1058']\n",
+      "['FL.2.7', 'sars-cov-2-variants/lineage-proposals#552']\n",
+      "['FL.2.7.1', 'sars-cov-2-variants/lineage-proposals#552']\n",
+      "['FL.10', 'sars-cov-2-variants/lineage-proposals#28']\n",
+      "['FL.24.1', 'sars-cov-2-variants/lineage-proposals#789']\n",
+      "['FL.38', 'sars-cov-2-variants/lineage-proposals#1001']\n",
+      "['HK.3.14', 'sars-cov-2-variants/lineage-proposals#978']\n",
+      "['JG.3.4', 'sars-cov-2-variants/lineage-proposals#1081']\n",
+      "['KL.1', 'sars-cov-2-variants/lineage-proposals#1174']\n",
+      "['HV.1.8', '#2432']\n",
+      "['HV.1.9', 'sars-cov-2-variants/lineage-proposals#957']\n",
+      "['HV.1.10', 'sars-cov-2-variants/lineage-proposals#1044']\n",
+      "['HV.2', 'sars-cov-2-variants/lineage-proposals#537']\n",
+      "['EG.7', 'sars-cov-2-variants/lineage-proposals#56']\n",
+      "['FP.2', 'sars-cov-2-variants/lineage-proposals#31']\n",
+      "['JF.1.1.1', 'sars-cov-2-variants/lineage-proposals#643']\n",
+      "['JF.3', 'sars-cov-2-variants/lineage-proposals#976']\n",
+      "['XBB.1.16.28', 'sars-cov-2-variants/lineage-proposals#1000']\n",
+      "['XBB.1.16.29', 'sars-cov-2-variants/lineage-proposals#524']\n",
+      "['XBB.1.16.30', 'sars-cov-2-variants/lineage-proposals#554']\n",
+      "['FY.1.2.1', 'sars-cov-2-variants/lineage-proposals#863']\n",
+      "['FW.1.1.1', 'sars-cov-2-variants/lineage-proposals#1242']\n",
+      "['GE.1.2.1', 'sars-cov-2-variants/lineage-proposals#1103']\n",
+      "['XBB.2.3.21', 'sars-cov-2-variants/lineage-proposals#281']\n",
+      "['XBC.1.7', 'sars-cov-2-variants/lineage-proposals#110']\n",
+      "['XBL.3.1', 'sars-cov-2-variants/lineage-proposals#44']\n",
+      "['XDA.1', 'sars-cov-2-variants/lineage-proposals#1031']\n",
+      "['XDD.1', 'sars-cov-2-variants/lineage-proposals#1203']\n",
+      "['XDD.1.1', 'sars-cov-2-variants/lineage-proposals#1203']\n",
+      "['XDD.2', 'sars-cov-2-variants/lineage-proposals#1176']\n",
+      "['XDH', 'sars-cov-2-variants/lineage-proposals#128']\n"
      ]
     }
    ],
