add_3_autoref_from_main_and_10_from_lineage_proposals

--- a/automated-issue-ref.ipynb
+++ b/automated-issue-ref.ipynb
@@ -144,7 +144,11 @@
       "processed  1300 milestones\n",
       "processed  1310 milestones\n",
       "processed  1320 milestones\n",
-      "processed  1330 milestones\n"
+      "processed  1330 milestones\n",
+      "processed  1340 milestones\n",
+      "processed  1350 milestones\n",
+      "processed  1360 milestones\n",
+      "processed  1370 milestones\n"
      ]
     }
    ],
@@ -309,60 +313,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['KG.1', 'sars-cov-2-variants/lineage-proposals#951']\n",
-      "['DV.7.1.8', 'sars-cov-2-variants/lineage-proposals#860']\n",
-      "['JN.1.1.2', 'sars-cov-2-variants/lineage-proposals#1147']\n",
-      "['JN.1.1.3', 'sars-cov-2-variants/lineage-proposals#1089']\n",
-      "['JN.1.6.1', 'sars-cov-2-variants/lineage-proposals#1089']\n",
-      "['JN.1.7', 'sars-cov-2-variants/lineage-proposals#1097']\n",
-      "['JN.1.8.1', 'sars-cov-2-variants/lineage-proposals#1097']\n",
-      "['JN.1.9', '#2410']\n",
-      "['JN.1.10', 'sars-cov-2-variants/lineage-proposals#1135']\n",
-      "['JN.2.2', '#2433']\n",
-      "['JN.2.5', 'sars-cov-2-variants/lineage-proposals#1173']\n",
+      "['JN.1.2.1', 'sars-cov-2-variants/lineage-proposals#1322']\n",
+      "['JN.1.4.1', 'sars-cov-2-variants/lineage-proposals#1175']\n",
+      "['JN.1.9.1', 'sars-cov-2-variants/lineage-proposals#1097']\n",
+      "['JN.1.11.1', 'sars-cov-2-variants/lineage-proposals#1253']\n",
+      "['KP.1', 'sars-cov-2-variants/lineage-proposals#1364']\n",
+      "['JN.1.12', 'sars-cov-2-variants/lineage-proposals#1253']\n",
+      "['JN.1.13', '#2464']\n",
+      "['JN.1.16', 'sars-cov-2-variants/lineage-proposals#1253']\n",
+      "['JN.1.18', 'sars-cov-2-variants/lineage-proposals#1089']\n",
+      "['JN.1.21', 'sars-cov-2-variants/lineage-proposals#1162']\n",
+      "['JN.12', 'sars-cov-2-variants/lineage-proposals#1102']\n",
       "['JH.2', '#2068']\n",
-      "['GK.1.8', 'sars-cov-2-variants/lineage-proposals#643']\n",
-      "['GK.1.8.1', 'sars-cov-2-variants/lineage-proposals#1127']\n",
-      "['GK.1.11', 'sars-cov-2-variants/lineage-proposals#643']\n",
-      "['GK.3.1', 'sars-cov-2-variants/lineage-proposals#643']\n",
-      "['KK.1', 'sars-cov-2-variants/lineage-proposals#1210']\n",
-      "['KK.2', 'sars-cov-2-variants/lineage-proposals#1277']\n",
-      "['XBB.1.5.108', 'sars-cov-2-variants/lineage-proposals#550']\n",
-      "['XBB.1.5.109', '#2262']\n",
-      "['HN.4.1', 'sars-cov-2-variants/lineage-proposals#1054']\n",
-      "['HN.4.1.1', 'sars-cov-2-variants/lineage-proposals#1054']\n",
-      "['HN.4.2', 'sars-cov-2-variants/lineage-proposals#971']\n",
-      "['FL.1.8', 'sars-cov-2-variants/lineage-proposals#1058']\n",
-      "['FL.2.7', 'sars-cov-2-variants/lineage-proposals#552']\n",
-      "['FL.2.7.1', 'sars-cov-2-variants/lineage-proposals#552']\n",
-      "['FL.10', 'sars-cov-2-variants/lineage-proposals#28']\n",
-      "['FL.24.1', 'sars-cov-2-variants/lineage-proposals#789']\n",
-      "['FL.38', 'sars-cov-2-variants/lineage-proposals#1001']\n",
-      "['HK.3.14', 'sars-cov-2-variants/lineage-proposals#978']\n",
-      "['JG.3.4', 'sars-cov-2-variants/lineage-proposals#1081']\n",
-      "['KL.1', 'sars-cov-2-variants/lineage-proposals#1174']\n",
-      "['HV.1.8', '#2432']\n",
-      "['HV.1.9', 'sars-cov-2-variants/lineage-proposals#957']\n",
-      "['HV.1.10', 'sars-cov-2-variants/lineage-proposals#1044']\n",
-      "['HV.2', 'sars-cov-2-variants/lineage-proposals#537']\n",
-      "['EG.7', 'sars-cov-2-variants/lineage-proposals#56']\n",
-      "['FP.2', 'sars-cov-2-variants/lineage-proposals#31']\n",
-      "['JF.1.1.1', 'sars-cov-2-variants/lineage-proposals#643']\n",
-      "['JF.3', 'sars-cov-2-variants/lineage-proposals#976']\n",
-      "['XBB.1.16.28', 'sars-cov-2-variants/lineage-proposals#1000']\n",
-      "['XBB.1.16.29', 'sars-cov-2-variants/lineage-proposals#524']\n",
-      "['XBB.1.16.30', 'sars-cov-2-variants/lineage-proposals#554']\n",
-      "['FY.1.2.1', 'sars-cov-2-variants/lineage-proposals#863']\n",
-      "['FW.1.1.1', 'sars-cov-2-variants/lineage-proposals#1242']\n",
-      "['GE.1.2.1', 'sars-cov-2-variants/lineage-proposals#1103']\n",
-      "['XBB.2.3.21', 'sars-cov-2-variants/lineage-proposals#281']\n",
-      "['XBC.1.7', 'sars-cov-2-variants/lineage-proposals#110']\n",
-      "['XBL.3.1', 'sars-cov-2-variants/lineage-proposals#44']\n",
-      "['XDA.1', 'sars-cov-2-variants/lineage-proposals#1031']\n",
-      "['XDD.1', 'sars-cov-2-variants/lineage-proposals#1203']\n",
-      "['XDD.1.1', 'sars-cov-2-variants/lineage-proposals#1203']\n",
-      "['XDD.2', 'sars-cov-2-variants/lineage-proposals#1176']\n",
-      "['XDH', 'sars-cov-2-variants/lineage-proposals#128']\n"
+      "['GN.1.4', '#2349']\n"
      ]
     }
    ],
@@ -419,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "1c9369e1",
    "metadata": {},
    "outputs": [
@@ -427,9 +390,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Add  2  references from cov-lineages/pango-designation.\n",
+      "Add  3  references from cov-lineages/pango-designation.\n",
       "Upgrade  0  references from cov-lineages/pango-designation.\n",
-      "Add  78  references from sars-cov-2-variants/lineage-proposals.\n"
+      "Add  10  references from sars-cov-2-variants/lineage-proposals.\n"
      ]
     }
    ],
