add_1_from_main_31_from_lineage_proposal

--- a/automated-issue-ref.ipynb
+++ b/automated-issue-ref.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "id": "f64573a2",
    "metadata": {
     "scrolled": true
@@ -148,7 +148,12 @@
       "processed  1340 milestones\n",
       "processed  1350 milestones\n",
       "processed  1360 milestones\n",
-      "processed  1370 milestones\n"
+      "processed  1370 milestones\n",
+      "processed  1380 milestones\n",
+      "processed  1390 milestones\n",
+      "processed  1400 milestones\n",
+      "processed  1410 milestones\n",
+      "processed  1420 milestones\n"
      ]
     }
    ],
@@ -245,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "88a367db",
    "metadata": {},
    "outputs": [],
@@ -282,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "id": "f5b15585",
    "metadata": {},
    "outputs": [],
@@ -305,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "id": "a56544a8",
    "metadata": {},
    "outputs": [
@@ -313,19 +318,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['JN.1.2.1', 'sars-cov-2-variants/lineage-proposals#1322']\n",
-      "['JN.1.4.1', 'sars-cov-2-variants/lineage-proposals#1175']\n",
-      "['JN.1.9.1', 'sars-cov-2-variants/lineage-proposals#1097']\n",
-      "['JN.1.11.1', 'sars-cov-2-variants/lineage-proposals#1253']\n",
-      "['KP.1', 'sars-cov-2-variants/lineage-proposals#1364']\n",
-      "['JN.1.12', 'sars-cov-2-variants/lineage-proposals#1253']\n",
-      "['JN.1.13', '#2464']\n",
-      "['JN.1.16', 'sars-cov-2-variants/lineage-proposals#1253']\n",
-      "['JN.1.18', 'sars-cov-2-variants/lineage-proposals#1089']\n",
-      "['JN.1.21', 'sars-cov-2-variants/lineage-proposals#1162']\n",
-      "['JN.12', 'sars-cov-2-variants/lineage-proposals#1102']\n",
+      "['KR.1', 'sars-cov-2-variants/lineage-proposals#1253']\n",
+      "['KV.2', 'sars-cov-2-variants/lineage-proposals#1097']\n",
+      "['JN.1.4.6', 'sars-cov-2-variants/lineage-proposals#1097']\n",
+      "['JN.1.7.1', 'sars-cov-2-variants/lineage-proposals#1371']\n",
+      "['JN.1.7.3', 'sars-cov-2-variants/lineage-proposals#1343']\n",
+      "['JN.1.8.2', 'sars-cov-2-variants/lineage-proposals#1089']\n",
+      "['KP.2.1', 'sars-cov-2-variants/lineage-proposals#1440']\n",
+      "['KP.2.2', 'sars-cov-2-variants/lineage-proposals#1446']\n",
+      "['KP.3', 'sars-cov-2-variants/lineage-proposals#1410']\n",
+      "['JN.1.18.1', 'sars-cov-2-variants/lineage-proposals#1414']\n",
+      "['JN.1.18.2', 'sars-cov-2-variants/lineage-proposals#1441']\n",
+      "['JN.1.26', 'sars-cov-2-variants/lineage-proposals#1089']\n",
+      "['JN.1.28.1', 'sars-cov-2-variants/lineage-proposals#1244']\n",
+      "['KW.1', 'sars-cov-2-variants/lineage-proposals#1244']\n",
+      "['KW.1.1', 'sars-cov-2-variants/lineage-proposals#1244']\n",
+      "['JN.1.30.1', 'sars-cov-2-variants/lineage-proposals#1089']\n",
+      "['KU.2', 'sars-cov-2-variants/lineage-proposals#1089']\n",
+      "['JN.1.31', 'sars-cov-2-variants/lineage-proposals#1319']\n",
+      "['JN.1.35', 'sars-cov-2-variants/lineage-proposals#1362']\n",
+      "['JN.1.36', 'sars-cov-2-variants/lineage-proposals#1326']\n",
+      "['JN.1.36.1', 'sars-cov-2-variants/lineage-proposals#1326']\n",
+      "['JN.1.40', 'sars-cov-2-variants/lineage-proposals#1451']\n",
+      "['JN.1.41', 'sars-cov-2-variants/lineage-proposals#1256']\n",
+      "['JN.1.42.1', 'sars-cov-2-variants/lineage-proposals#1474']\n",
+      "['JN.1.44', 'sars-cov-2-variants/lineage-proposals#987']\n",
+      "['JN.13.1', 'sars-cov-2-variants/lineage-proposals#1386']\n",
+      "['JQ.2.1', 'sars-cov-2-variants/lineage-proposals#1373']\n",
       "['JH.2', '#2068']\n",
-      "['GN.1.4', '#2349']\n"
+      "['GE.1.2.2', 'sars-cov-2-variants/lineage-proposals#1340']\n",
+      "['XDD.1.1.1', 'sars-cov-2-variants/lineage-proposals#1450']\n",
+      "['XDK.1', 'sars-cov-2-variants/lineage-proposals#1407']\n",
+      "['XDP.1', 'sars-cov-2-variants/lineage-proposals#1358']\n"
      ]
     }
    ],
@@ -382,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "id": "1c9369e1",
    "metadata": {},
    "outputs": [
@@ -390,9 +414,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Add  3  references from cov-lineages/pango-designation.\n",
+      "Add  1  references from cov-lineages/pango-designation.\n",
       "Upgrade  0  references from cov-lineages/pango-designation.\n",
-      "Add  10  references from sars-cov-2-variants/lineage-proposals.\n"
+      "Add  31  references from sars-cov-2-variants/lineage-proposals.\n"
      ]
     }
    ],
